Payment revised, dependent-restrict with error:course, company & schedule, relationship rev:booking, company, payment, schedule

--- a/app/views/courses/show.html.haml
+++ b/app/views/courses/show.html.haml
@@ -30,7 +30,7 @@
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.course.fee')+":"
-  %dd= @course.fee
+  %dd= @course.fee.nil? ? "" : "RM "+sprintf("%.2f", @course.fee).to_s
 
 %dl.dl-horizontal
   %dt= t('activerecord.attributes.course.duration')+":"
