--- a/app/views/companies/index.html.haml
+++ b/app/views/companies/index.html.haml
@@ -2,8 +2,7 @@
 - model_class = Company
 .page-header
   %h1=t 'activerecord.attributes.company.list'
-
-
+%p#notice=notice
 .navbar.navbar-inverse
   .navbar-inner
     %ul.nav
