--- a/app/views/courses/index.html.haml
+++ b/app/views/courses/index.html.haml
@@ -2,7 +2,7 @@
 - model_class = Course
 .page-header
   %h1=t('activerecord.attributes.course.list')
-
+%p#notice= notice
 .navbar.navbar-inverse
   .navbar-inner
     %ul.nav
@@ -34,7 +34,7 @@
         %td= course.category
         %td= course.topic
         %td= course.description
-        %td= course.fee
+        %td= course.fee.nil? ? "" : "RM "+sprintf("%.2f", course.fee).to_s
         %td= course.duration.to_s+" "+course.duration_details
         /%td= course.user_id
         /%td= course.college_id
