--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -2,7 +2,7 @@
 - model_class = Schedule
 .page-header
   %h1=t 'activerecord.attributes.schedule.list'
-
+%p#notice=notice
 .navbar.navbar-inverse
   .navbar-inner
     %ul.nav
