--- a/app/views/payments/_form.html.haml
+++ b/app/views/payments/_form.html.haml
@@ -3,21 +3,42 @@
     = render 'shared/error_messages', object: f.object
 
     .control-group
-      = f.label t('activerecord.attributes.payment.booking_id'), :class => 'control-label'
-      .controls= f.collection_select :booking_id, Booking.all, :id, :schedule_details, {:include_blank => (t 'helpers.select')}, {:class => 'selectpicker mandatory'}
+      = f.label  t('activerecord.attributes.payment.payment_for'), :class => 'control-label'
+      .controls
+        - aa='checked' if @payment.booking_id!=nil
+        = f.check_box :by_booking, checked: aa
+        .small=t('activerecord.attributes.payment.payment_type')
+        
+    #span_booking
+      .control-group
+        = f.label t('activerecord.attributes.payment.booking_id'), :class => 'control-label'
+        .controls
+          = f.collection_select :booking_id, Booking.all, :id, :schedule_details, {:include_blank => (t 'helpers.select')}, {:class => 'selectpicker mandatory'}
+    #span_schedule 
+      .control-group
+        = f.label t('activerecord.attributes.payment.schedule_id'), :class => 'control-label'
+        .controls
+          = f.collection_select :schedule_id, Schedule.joins(:customers).uniq, :id, :schedule_course_details, {:include_blank => (t 'helpers.select')}, {:class => 'selectpicker mandatory'}
+
     /.control-group
     /  = f.label t('activerecord.attributes.payment.customer_id'), :class => 'control-label'
     /  .controls= f.text_field :customer_id, :class => 'text_field '
     .control-group
       = f.label t('activerecord.attributes.payment.method'), :class => 'control-label'
-      .controls= f.select :method, DropDown::PAYMENT_METHOD, :class => 'selectpicker'      
+      .controls
+        = f.select :method, DropDown::PAYMENT_METHOD, {},{:class => 'selectpicker mandatory'}
+    .control-group
+      = f.label t('activerecord.attributes.payment.reference_no'), :class => 'control-label'
+      .controls
+        = f.text_field :reference_no, :class => 'text_field'
+        .small=t('activerecord.attributes.payment.reference_caption')
     .control-group
       = f.label t('activerecord.attributes.payment.auth_code'), :class => 'control-label'
       .controls= f.text_field :auth_code, :class => 'text_field '
     .control-group
       = f.label t('activerecord.attributes.payment.amount'), :class => 'control-label'
       .controls
-        = f.text_field :amount, :class => 'text_field'
+        = f.text_field :amount, :class => 'text_field mandatory'
         .small=t('helpers.in_rm')
     .control-group
       = f.label t('activerecord.attributes.payment.confirmed_by'), :class => 'control-label'
@@ -42,3 +63,32 @@
       = f.submit (t 'helpers.links.submit'), :class => 'btn btn-primary'
       = link_to t('.cancel', :default => t("helpers.links.cancel")), |
         payments_path, :class => 'btn'
+
+:javascript
+
+$(document).ready(function(e){
+
+  $("input[id='payment_by_booking']").change(function() {  
+    if($('#payment_by_booking').is(':checked')) { 
+      $("#span_booking").show("highlight"); 
+      $("#span_schedule").hide(""); 
+    }else{
+      $("#span_schedule").show("highlight"); 
+      $("#span_booking").hide(""); 
+    }
+  });
+  $("input[id='payment_by_booking']").each(function() {  
+    if($('#payment_by_booking').is(':checked')) { 
+      $("#span_booking").show("highlight"); 
+      $("#span_schedule").hide(""); 
+    }else{
+      $("#span_schedule").show("highlight"); 
+      $("#span_booking").hide(""); 
+    }
+
+  });
+  
+
+
+
+});
