--- a/app/views/payments/index.html.haml
+++ b/app/views/payments/index.html.haml
@@ -14,10 +14,10 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "25%"}=t('activerecord.attributes.payment.booking_id')
-      %th{width: "10%"}=t('activerecord.attributes.payment.customer_id')
+      %th{width: "25%"}=t('activerecord.attributes.payment.schedule_id')
+      %th{width: "22%"}=t('activerecord.attributes.course.organizer')+" / "+t('activerecord.attributes.payment.customer_id')
       %th{width: "8%"}=t('activerecord.attributes.payment.method')
-      %th{width: "12%"}=t('activerecord.attributes.payment.auth_code')
+      /%th{width: "12%"}=t('activerecord.attributes.payment.auth_code')
       %th{width: "10%"}=t('activerecord.attributes.payment.amount')
       %th{width: "12%"}=t('activerecord.attributes.payment.confirmed_by')
       %th{width: "13%"}=t('activerecord.attributes.payment.confirmed_on')
@@ -30,13 +30,13 @@
     = render "index_search"
     - @payments.each do |payment|
       %tr
-        %td= payment.booking.schedule.schedule_course_details
+        %td= payment.booking_id.nil? ? payment.schedule.schedule_course_details : payment.booking.schedule.schedule_course_details
         %td
           /= payment.customer_id
-          = payment.booking.participant.name
+          = payment.booking_id.nil? ? payment.schedule.schedulecourse.course_organizer+": "+payment.schedule.customers.count.to_s+" "+t('activerecord.attributes.schedule.pax') : payment.booking.participant.name
         %td=payment.try(:method)
-        %td= payment.auth_code
-        %td= payment.amount
+        /%td= payment.auth_code
+        %td= "RM "+sprintf("%.2f", payment.amount).to_s
         %td= payment.authorised_payer.name
         %td= payment.confirmed_on.try(:strftime, '%d %b %Y %H:%M')
         %td= payment.status
