--- a/app/views/payments/show.html.haml
+++ b/app/views/payments/show.html.haml
@@ -5,8 +5,8 @@
 %p#notice= notice
 
 %dl.dl-horizontal
-  %dt= t('activerecord.attributes.payment.booking_id')+":"
-  %dd= @payment.booking.schedule_details
+  %dt= @payment.booking_id.nil? ?  t('activerecord.attributes.payment.schedule_id')+":" :  t('activerecord.attributes.payment.booking_id')+":"
+  %dd= @payment.booking_id.nil? ? @payment.schedule.schedule_course_details : @payment.booking.schedule_details
 
 /%dl.dl-horizontal
 /  %dt= t('activerecord.attributes.payment.customer_id')+":"
