--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -14,7 +14,7 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "20%"}=t('activerecord.attributes.customer.name')
+      %th{width: "20%"}= sort_link @search, :name, t('activerecord.attributes.customer.name')
       %th{width: "12%"}=t('activerecord.attributes.customer.id_no')
       %th{width: "10%"}=t('activerecord.attributes.customer.position')
       %th{width: "10%"}=t('activerecord.attributes.customer.phone')
