--- a/app/views/schedules/index.html.haml
+++ b/app/views/schedules/index.html.haml
@@ -13,12 +13,12 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: '25%'}=t 'activerecord.attributes.schedule.course_id'
-      %th{width: '15%'}=t 'activerecord.attributes.schedule.scheduled_on'
-      %th{width: '20%'}=t 'activerecord.attributes.schedule.location_id'
-      %th{width: '20%'}=t 'activerecord.attributes.schedule.lecturer_id'
-      %th{width: '10%', colspan: 2}=t 'activerecord.attributes.schedule.participants'
-      %th{width: '10%'} Status
+      %th{width: '25%'}=t('activerecord.attributes.schedule.course_id')
+      %th{width: '15%'}=sort_link @search, :start_on, t('activerecord.attributes.schedule.scheduled_on')
+      %th{width: '20%'}=t('activerecord.attributes.schedule.location_id')
+      %th{width: '20%'}=t('activerecord.attributes.schedule.lecturer_id')
+      %th{width: '10%', colspan: 2}=t('activerecord.attributes.schedule.participants')
+      %th{width: '10%'}=sort_link @search, :status, "Status"
       /%th=t 'helpers.user_id'
       /%th=t 'helpers.college_id'
       /%th=t 'helpers.data'
