--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -16,7 +16,8 @@
             =t 'main_menu.course'
             %b.caret
           %ul.dropdown-menu
-            %li= link_to (t 'activerecord.attributes.course.title'), courses_path
+            - permitted_to? :read, :courses do
+              %li= link_to (t 'activerecord.attributes.course.title'), courses_path
             %li= link_to (t 'activerecord.models.schedule'), schedules_path
             %li= link_to (t 'activerecord.models.booking'), bookings_path
             %li
@@ -50,19 +51,29 @@
             %li
               %a{:href => "#"} Assets
         %li= link_to (t 'main_menu.payments'), payments_path
-          
+
+      %ul.nav.navbar-nav.navbar-left
+        %li{style: "padding-top:10px; padding-left:300px;"}
+          - if user_signed_in?
+            %a{:href =>root_path}=current_user.email
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown{style: "padding-top:10px; padding-right:60px;"}
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
             Account
             %b.caret
           %ul.dropdown-menu
-            %li
-              %a{:href => "#"} Logout
-            %li
-              %a{:href => "#"} Update Details
-            %li
-              %a{:href => "#"} Change Password
-
+            - unless user_signed_in?
+              %li
+                = link_to "Sign in", new_user_session_path
+            - else
+              %li
+                %a{:href => destroy_user_session_path, 'data-method' => :delete} Logout
+              %li
+                %a{:href => edit_user_path(current_user.id)} Update Details
+                - if current_user.user_roles && current_user.user_roles[:administration]=='1'
+                  %a{:href => users_path} Manage Users
+              %li
+                %a{:href => "#"} Change Password
+    
 
 
