--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -6,7 +6,55 @@
     This is the home page for the
     %a{:href => "https://github.com/maxcobmara/etain"} Etain App sample application.
     %br
-    = link_to "Sign up now!", new_user_registration_path, class: "btn btn-primary"
+    - if user_signed_in?
+      .small
+        /= current_user.email 
+        - matching_company_email=Company.where(email: current_user.email)
+        - matching_customer_email=Customer.where(email: current_user.email, corporate: true)
+        /= matching_customer_email.count
+        
+        - if matching_company_email.count > 0
+          - if current_user.company_id?
+            = current_user.email 
+            is the
+            %b company administrator 
+            for : 
+            = current_user.employer.name
+          - else
+            Your login email
+            %strong= current_user.email 
+            matches the following company administrator record :
+            %strong=matching_company_email.first.name
+            %br 
+            Click
+            = link_to 'here', match_user_path(current_user)
+            to link to this company.
+            /- @user=current_user
+            /= form_for @user do |f|
+            /  = f.hidden_field :company_id, value: Company.where(email: current_user.email).first.id
+            /  - role_list=["administration", "trainer", "trainee"]
+            /  - role_val=['1','0','0']
+            /  = f.fields_for :user_roles do |ff|
+            /    - role_list.each_with_index do |role, ind|
+            /      = ff.text_field role, value: role_val[ind]
+            /  = f.submit "Match Company", class: "btn btn-primary"
+        
+        - else
+          /set @user.company of matching email for corporate customers only
+          - if matching_customer_email.count > 0
+            - if current_user.company_id?
+            - else
+              Your login email
+              %strong= current_user.email 
+              matches the following company (employer) record :
+              %strong=matching_customer_email.first.clientcompany.name
+              %br 
+              Click
+              = link_to 'here', match_user_path(current_user)
+              to link to this company.
+          
+    - else
+      = link_to "Sign up now!", new_user_registration_path, class: "btn btn-primary"
 
     
   = link_to image_tag("powered_by_rails.png", alt: "Rails"), 'http://rubyonrails.org/'
