--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -53,27 +53,28 @@
         %li= link_to (t 'main_menu.payments'), payments_path
 
       %ul.nav.navbar-nav.navbar-left
-        %li{style: "padding-top:10px; padding-left:300px;"}
+        %li{style: "padding-top:10px; padding-left:250px;"}
           - if user_signed_in?
             %a{:href =>root_path}=current_user.email
       %ul.nav.navbar-nav.navbar-right
         %li.dropdown{style: "padding-top:10px; padding-right:60px;"}
           %a.dropdown-toggle{"data-toggle" => "dropdown", :href => "#"}
-            Account
+            =t 'main_menu.account'
             %b.caret
           %ul.dropdown-menu
             - unless user_signed_in?
               %li
-                = link_to "Sign in", new_user_session_path
+                = link_to t('activerecord.attributes.user.signin'), new_user_session_path
             - else
               %li
-                %a{:href => destroy_user_session_path, 'data-method' => :delete} Logout
+                %a{:href => destroy_user_session_path, 'data-method' => :delete}=t 'activerecord.attributes.user.logout'
               %li
-                %a{:href => edit_user_path(current_user.id)} Update Details
+                %a{:href => edit_user_path(current_user.id)}=t 'activerecord.attributes.user.update_details'
                 - if current_user.user_roles && current_user.user_roles[:administration]=='1'
-                  %a{:href => users_path} Manage Users
+                  %a{:href => users_path}=t 'activerecord.attributes.user.manage_user'
               %li
-                %a{:href => "#"} Change Password
+                /%a{:href => "#"}=t 'activerecord.attributes.user.change_password'
+                = link_to t('activerecord.attributes.user.change_password'), edit_user_registration_path(current_user.id)
     
 
 
