--- a/app/views/layouts/_header.html.haml
+++ b/app/views/layouts/_header.html.haml
@@ -49,7 +49,7 @@
             %li
               %a{:href => "#"} Resume Generator
             %li
-              %a{:href => "#"} Assets
+              %a{:href => "#"} Assets [Test]
         %li= link_to (t 'main_menu.payments'), payments_path
 
       %ul.nav.navbar-nav.navbar-left
