--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -24,7 +24,7 @@
       
     .control-group
       = f.label t('activerecord.attributes.customer.position'), :class => 'control-label'
-      .controls= f.text_field :position, :class => 'text_field input-xxlarge mandatory'   
+      .controls= f.text_field :position, :class => 'text_field input-xxlarge'   
 
     .control-group
       = f.label  t('activerecord.attributes.customer.phone'), :class => 'control-label'
