--- a/app/views/customers/index.html.haml
+++ b/app/views/customers/index.html.haml
@@ -14,27 +14,27 @@
 %table.table.table-condensed.table-hover.table-striped
   %thead
     %tr
-      %th{width: "20%"}= sort_link @search, :name, t('activerecord.attributes.customer.name')
+      %th{width: "30%", colspan: 2}=sort_link @search, :rank_id, t('activerecord.attributes.customer.rank_with_name')
       %th{width: "12%"}=t('activerecord.attributes.customer.id_no')
-      %th{width: "10%"}=t('activerecord.attributes.customer.position')
+      %th{width: "10%"}=sort_link @search, :position, t('activerecord.attributes.customer.position')
       %th{width: "10%"}=t('activerecord.attributes.customer.phone')
       %th{width: "18%"}=t('activerecord.attributes.customer.email')
-      %th{width: "10%"}=t('activerecord.attributes.customer.corporate')
-      %th{width: "20%"}=t('activerecord.attributes.customer.company_id')
+      %th{width: "5%"}=sort_link @search, :corporate, t('activerecord.attributes.customer.corporate2')
+      %th{width: "15%"}=sort_link @search, :company_id, t('activerecord.attributes.customer.company_id')
       /%th User
       /%th College
       /%th Data
       %th
   %tbody
     = render "index_search"
-    - @customers.each do |customer|
+    - @customers.order(name: :asc).each do |customer|
       %tr
-        %td= customer.name
+        %td= customer.rank_with_name
         %td= customer.id_no
         %td= customer.position
         %td= customer.phone
         %td= customer.email
-        %td= customer.corporate? ? (t 'actions.yes') : (t 'actions.no')
+        %td= customer.corporate? ? fa_icon("check") : fa_icon("times")
         %td= customer.corporate? ? customer.try(:clientcompany).try(:name) : "-"
         /%td= customer.user_id
         /%td= customer.college_id
