hide rate when required

--- a/app/views/ranks/_form.html.haml
+++ b/app/views/ranks/_form.html.haml
@@ -50,7 +50,7 @@
       else
       {
         $('#rank_rate').empty;
-        $('#rank_rate').parent().hide();
+        $('#span_rate').hide();
       }
     });
     $("#rank_category").each(function(){
@@ -69,10 +69,8 @@
       else
       {
         $('#rank_rate').empty;
-        $('#rank_rate').parent().hide();
+        $('#span_rate').hide();
       }   
-    });
-    $("#rank_name").change(function(){
     });
    
   });
