--- a/app/views/customers/_form.html.haml
+++ b/app/views/customers/_form.html.haml
@@ -31,12 +31,23 @@
       = f.label  t('activerecord.attributes.customer.corporate'), :class => 'control-label'
       .controls
         .col-sm-1= f.check_box :corporate, :id => 'is_checked'
-        .col-sm-3#span_displaylist= f.collection_select :company_id, Company.all, :id, :name, :include_blank => (t 'helpers.select_company'), :class => 'selectpicker'
-
-    .control-group#span_navy_rank
+        .col-sm-3#span_displaylist
+          /= f.collection_select :company_id, Company.all, :id, :name, :include_blank => (t 'helpers.select_company'), :class => 'selectpicker'
+          - company_list=[[I18n.t('helpers.select'), '']]
+          - company_collection=[]
+          - Company.all.each{|x|company_collection << [x.name, x.id]}
+          = f.select("company_id", options_for_select(company_collection, @customer.company_id), :include_blank => (t 'select'),  class: 'selectpicker')
+    .control-group#span_navy_apmm_rank
       = f.label t('activerecord.attributes.customer.rank_id'), :class => 'control-label'
       .controls
-        = f.collection_select :rank_id, Rank.all.order(id: :asc), :id, :description, :include_blank => (t 'select'), class: 'selectpicker'
+        /= f.collection_select :rank_id, Rank.all.order(id: :asc), :id, :description, :include_blank => (t 'select'), class: 'selectpicker'
+        - groupped_rank=[]
+        - rank_collection_navy=[[I18n.t('helpers.select'), '']]
+        - rank_collection_apmm=[[I18n.t('helpers.select'), '']]
+        - Rank.where('rate is not null').order(id: :asc).each{|x|rank_collection_navy << [x.name, x.id]}
+        - Rank.where('rate is null').order(id: :asc).each{|x|rank_collection_apmm << [x.name, x.id]}
+        - groupped_rank << ["Tentera Laut Diraja Malaysia", rank_collection_navy] << ["Agensi Penguatkuasaan Maritim Malaysia", rank_collection_apmm]
+        = f.select("rank_id", grouped_options_for_select(groupped_rank, @customer.rank_id), :class => 'selectpicker')
         .small
           =t('activerecord.attributes.customer.armed_force_personnel')
 
@@ -61,19 +72,33 @@
 :javascript
   
   $(document).ready(function(){
+    ranks = $('#customer_rank_id').html();
     $("#customer_company_id").change(function(){
       company=$("#customer_company_id :selected").text()
-      if (company.indexOf("Tentera Laut")!=-1)
-      { $("#span_navy_rank").show();}
+      if (company.indexOf("Tentera Laut")!=-1 || company.indexOf("Agensi Penguatkuasaan Maritim")!=-1)
+      { 
+        escaped_company=company.replace(/([ #;&,.+*~\':"!^$[\]()=>|\/@])/g, '\\$1')
+        options = $(ranks).filter("optgroup[label='"+escaped_company+"']").html();
+        if(options)
+        {  $('#customer_rank_id').html(options); }
+        $("#span_navy_apmm_rank").show();
+      }
       else
-      { $("#span_navy_rank").hide();}
+      { $("#span_navy_apmm_rank").hide();}
     });
+
     $("#customer_company_id").each(function(){
       company=$("#customer_company_id :selected").text()
-      if (company.indexOf("Tentera Laut")!=-1)
-      { $("#span_navy_rank").show();}
+      if (company.indexOf("Tentera Laut")!=-1 || company.indexOf("Agensi Penguatkuasaan Maritim")!=-1)
+      { 
+        escaped_company=company.replace(/([ #;&,.+*~\':"!^$[\]()=>|\/@])/g, '\\$1')
+        options = $(ranks).filter("optgroup[label='"+escaped_company+"']").html();
+        if(options)
+        {  $('#customer_rank_id').html(options); }
+        $("#span_navy_apmm_rank").show();
+      }
       else
-      { $("#span_navy_rank").hide();}
+      { $("#span_navy_apmm_rank_rank").hide();}
     });
   });
 
